--- a/styles/sass/spine.scss
+++ b/styles/sass/spine.scss
@@ -61,14 +61,14 @@
 		min-height: 100%;
 		position: absolute;
 		xxdisplay: none;
-		width: 1000px;
+		width: 198px;
 		}
 		
 .bleed {
 
 	#glue:before {
 		left: -802px;
-		xxwidth: 1000px;
+		width: 1000px;
 		display: block;
 		}
 	&.unshelved #glue:before {
